Avoid sidebar overlapping cards by making it only as high as necessary When bottom part (cards and license attribution) is hovered, bring it to the foreground so it covers the sidebar

--- a/src/client/components/board/board.css
+++ b/src/client/components/board/board.css
@@ -15,3 +15,11 @@
   bottom: 5px;
   background-color: white;
 }
+
+.player-wrap {
+  position: relative;
+}
+
+.player-wrap:hover {
+  z-index: 1;
+}
